test/corpus/push_pop_meta.txt
==============
push pop meta
==============

pushmeta location: "Lausanne, Switzerland"

2015-06-07 * "Something"
    Assets:Something   1 USD
    Assets:Something  -1 USD

popmeta location:

---

(file
    (directive
        (pushmeta
            (key_value (key) (string))
        )
    )
    (entry
        (transaction
            (date)
            (flag)
            (txn_strings (string))
            (postings
                (posting
                    (account)
                    (incomplete_amount (number) (currency))
                )
                (posting
                    (account)
                    (incomplete_amount (unary_number_expr (number)) (currency))
                )
            )
        )
    )
)
