test/corpus/ugly_bugs.txt
=================
extra whitespace
=================


2013-07-11 note Assets:Cash "test"


;;


---

(file
    (note
        (date)
        (account)
        (string)
    )
    (comment)
)

=============================
extra whitespace transaction
=============================

2013-05-18 * "Nice dinner at Mermaid Inn"
    Expenses:Restaurant         100 USD
    Assets:US:Cash

;; End of file',

---

(file
    (transaction
        (date)
        (txn)
        (txn_strings (string))
        (posting_or_kv_list
            (posting
                (account)
                (incomplete_amount
                    (number)
                    (currency)
                )
            )
            (posting
                (account)
            )
        )
    )
    (comment)
)
